tools/sddl2/assembler/tests/success/load_u8_basic.asm
# Test: load.u8 - assembler test
# Verify load.u8 instruction assembles correctly
push.i32 0
load.u8
halt
